--- a/codes/src/stylesheets/style.css
+++ b/codes/src/stylesheets/style.css
@@ -84,7 +84,7 @@ body {
 
 form {
 	width: 75%;
-	padding: 56px 72px 56px 56px;
+	padding: 56px 88px 56px 56px;
 }
 
 .f-header {
@@ -114,7 +114,7 @@ form {
 /* middle section */
 
 .middle-section {
-	padding-bottom: 48px;
+	padding-bottom: 24px;
 	margin-bottom: 36px;
 	border-bottom: 1px solid rgba(0,0,0,0.1);
 }
@@ -129,4 +129,93 @@ form {
 	margin-bottom: 36px;
 	font-size: 22px;
 	font-weight: 750;
+}
+
+/* page-1 section */
+
+.name-sec, .email-sec {
+	display: flex;
+	justify-content: space-between;
+	margin-right: 24px;
+	align-items: center;
+}
+.name-sec div label, .email-sec div label {
+	display: block;
+	margin-bottom: 6px;
+	font-size: 14px;
+	font-weight: 500;
+	color: rgba(3, 3, 68, 0.9);
+}
+.name-sec div input,.email-sec div input {
+	margin-bottom: 24px;
+	color: rgba(3, 3, 68, 0.9);
+	padding: 10px 12px;
+	border-radius: 6px;
+	font-size: 16px;
+	outline: 0;
+	border: 1px solid rgba(0,0,0,0.4);
+}
+.name-sec div input:focus {
+	box-shadow:  0 0 4px 0px rgba(26, 26, 248,1);
+}
+.email-sec div input:focus {
+	box-shadow:  0 0 4px 0px rgba(26, 26, 248,1);
+}
+
+.address label {
+	display: block;
+	margin-bottom: 6px;
+	font-size: 14px;
+	font-weight: 500;
+	color: rgba(3, 3, 68, 0.9);
+}
+
+.address input {
+	width: 91.5%;
+	margin-bottom: 24px;
+	color: rgba(3, 3, 68, 0.9);
+	padding: 10px 12px;
+	border-radius: 6px;
+	font-size: 16px;
+	outline: 0;
+	border: 1px solid rgba(0,0,0,0.4);
+}
+.address input:focus {
+	box-shadow:  0 0 4px 0px rgba(26, 26, 248,1);
+}
+
+.error {
+	border: 1px solid rgba(201, 5, 5,0.9) !important;
+	color: rgba(201, 5, 5,0.9) !important;
+	background-color: rgba(228, 179, 187,0.7) !important;
+}
+.email-sec span {
+	transform: translateY(-16px);
+	font-size: 14px;
+}
+.err {
+	display: block;
+	color: rgba(201, 5, 5,0.9) !important;
+}
+
+/* bottom btns */
+
+.bottom-btns {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+.bottom-btns button, .bottom-btns input {
+	background-color: rgba(26, 26, 248,0.6);
+	color: rgba(255,255,255,1);
+	border: 0;
+	padding: 6px 22px;
+	border-radius: 4px;
+	font-size: 20px;
+}
+
+
+.hidden {
+	display: none !important;
 }
